force-app/main/default/objects/Employee__c/fields/Employee_Info__c.field-meta.xml
<CustomField>
    <fullName>Employee_Info__c</fullName>
    <formula>IF( AND(Name != EvEName__c, NOT(ISBLANK(EvEName__c)) ), EvEName__c + &apos;, &apos; , &apos;&apos;) 

&amp; EvEmpNO__c &amp; &apos;, &apos;
&amp; EvCompNM__c &amp; &apos;, &apos;
&amp; EvSdeptNM__c</formula>
    <label>Employee Info.</label>
    <type>Text</type>
</CustomField>