force-app/main/default/objects/Employee__c/fields/EvAcubeID__c.field-meta.xml
<CustomField>
    <fullName>EvAcubeID__c</fullName>
    <label>Acube ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>