force-app/main/default/objects/Employee__c/fields/EvCellTel__c.field-meta.xml
<CustomField>
    <fullName>EvCellTel__c</fullName>
    <label>Mobile</label>
    <length>30</length>
    <type>Text</type>
</CustomField>