force-app/main/default/objects/Employee__c/fields/EvCompany__c.field-meta.xml
<CustomField>
    <fullName>EvCompany__c</fullName>
    <label>EP Company</label>
    <length>30</length>
    <type>Text</type>
</CustomField>