force-app/main/default/objects/Employee__c/fields/EvCompENM__c.field-meta.xml
<CustomField>
    <fullName>EvCompENM__c</fullName>
    <label>Company Name (EN)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>