force-app/main/default/objects/Employee__c/fields/EvCompNM__c.field-meta.xml
<CustomField>
    <fullName>EvCompNM__c</fullName>
    <label>Company Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>