force-app/main/default/objects/Employee__c/fields/EvCompTel__c.field-meta.xml
<CustomField>
    <fullName>EvCompTel__c</fullName>
    <label>Telephone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>