force-app/main/default/objects/Employee__c/fields/EvDept__c.field-meta.xml
<CustomField>
    <fullName>EvDept__c</fullName>
    <label>Department Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>