force-app/main/default/objects/Employee__c/fields/EvEmpNO__c.field-meta.xml
<CustomField>
    <fullName>EvEmpNO__c</fullName>
    <label>Employee Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>