force-app/main/default/objects/Employee__c/fields/EvEName__c.field-meta.xml
<CustomField>
    <fullName>EvEName__c</fullName>
    <label>Name(EN)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>