force-app/main/default/objects/Employee__c/fields/EvFlag__c.field-meta.xml
<CustomField>
    <fullName>EvFlag__c</fullName>
    <description>1 인사정보만 있음
3 knox정보만 있음
4 인사 / knox 정보 모두 있음
6 knox정보만 있는데 사내시스템 사용 가능</description>
    <label>Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>