force-app/main/default/objects/Employee__c/fields/EvGsber__c.field-meta.xml
<CustomField>
    <fullName>EvGsber__c</fullName>
    <label>Business Area</label>
    <length>10</length>
    <type>Text</type>
</CustomField>