force-app/main/default/objects/Employee__c/fields/EvHName__c.field-meta.xml
<CustomField>
    <fullName>EvHName__c</fullName>
    <label>Name(KR)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>