force-app/main/default/objects/Employee__c/fields/EvJikGiub__c.field-meta.xml
<CustomField>
    <fullName>EvJikGiub__c</fullName>
    <label>Position</label>
    <length>20</length>
    <type>Text</type>
</CustomField>