force-app/main/default/objects/Employee__c/fields/EvJikGiubNM__c.field-meta.xml
<CustomField>
    <fullName>EvJikGiubNM__c</fullName>
    <label>Position Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>