force-app/main/default/objects/Employee__c/fields/EvJikGubNM__c.field-meta.xml
<CustomField>
    <fullName>EvJikGubNM__c</fullName>
    <label>Title Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>