force-app/main/default/objects/Employee__c/fields/EvKostl__c.field-meta.xml
<CustomField>
    <fullName>EvKostl__c</fullName>
    <label>Cost Center</label>
    <length>10</length>
    <type>Text</type>
</CustomField>