force-app/main/default/objects/Employee__c/fields/EvMailAddr__c.field-meta.xml
<CustomField>
    <fullName>EvMailAddr__c</fullName>
    <label>Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>