force-app/main/default/objects/Employee__c/fields/EvMailReLanguage__c.field-meta.xml
<CustomField>
    <fullName>EvMailReLanguage__c</fullName>
    <label>Language</label>
    <length>10</length>
    <type>Text</type>
</CustomField>