force-app/main/default/objects/Employee__c/fields/EvSapBukrs__c.field-meta.xml
<CustomField>
    <fullName>EvSapBukrs__c</fullName>
    <label>Company Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>