force-app/main/default/objects/Employee__c/fields/EvSapEmpNO__c.field-meta.xml
<CustomField>
    <fullName>EvSapEmpNO__c</fullName>
    <label>SAP Employee Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>