force-app/main/default/objects/Employee__c/fields/EvSapUsrID__c.field-meta.xml
<CustomField>
    <fullName>EvSapUsrID__c</fullName>
    <label>SAP User ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>