force-app/main/default/objects/Employee__c/fields/EvSdeptENM__c.field-meta.xml
<CustomField>
    <fullName>EvSdeptENM__c</fullName>
    <label>Department Name (EN)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>