force-app/main/default/objects/Employee__c/fields/EvSdeptNM__c.field-meta.xml
<CustomField>
    <fullName>EvSdeptNM__c</fullName>
    <label>Department Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>