force-app/main/default/objects/Employee__c/fields/EvStatus__c.field-meta.xml
<CustomField>
    <fullName>EvStatus__c</fullName>
    <description>1    Active
2    Retiree/pensioner
3    Early retiree
4    Interns
5    Terminated
6    Inactive Employees
7    Temp/Seasonal
8    Expatriate
9    External employee
B    Non-holders (PS)
C    Holders (PS)</description>
    <label>Status</label>
    <length>1</length>
    <type>Text</type>
</CustomField>