force-app/main/default/objects/Employee__c/fields/EvTitleJikchakEN__c.field-meta.xml
<CustomField>
    <fullName>EvTitleJikchakEN__c</fullName>
    <label>Job Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>