force-app/main/default/objects/Employee__c/fields/EvTitleJikChakNM__c.field-meta.xml
<CustomField>
    <fullName>EvTitleJikChakNM__c</fullName>
    <label>Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>