force-app/main/default/objects/Employee__c/fields/EvUniqID__c.field-meta.xml
<CustomField>
    <fullName>EvUniqID__c</fullName>
    <externalId>true</externalId>
    <label>EP ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>