force-app/main/default/objects/Employee__c/fields/Knox_Id__c.field-meta.xml
<CustomField>
    <fullName>Knox_Id__c</fullName>
    <label>Knox_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>