force-app/main/default/objects/Employee__c/fields/Knox_Server_Location__c.field-meta.xml
<CustomField>
    <fullName>Knox_Server_Location__c</fullName>
    <label>Knox Server Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KR</fullName>
                <default>true</default>
                <label>KR</label>
            </value>
            <value>
                <fullName>GB</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>