force-app/main/default/objects/Employee__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Retirement status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B</fullName>
                <label>재직</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>휴직</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>퇴사</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>