force-app/main/default/objects/Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EvCompNM__c</columns>
    <columns>EvGsber__c</columns>
    <columns>EvKostl__c</columns>
    <columns>EvSdeptNM__c</columns>
    <columns>EvMailAddr__c</columns>
    <columns>EvEmpNO__c</columns>
    <columns>EvUniqID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EvMailAddr__c</field>
        <operation>equals</operation>
        <value>sy6703.lee@samsung.com</value>
    </filters>
    <label>All</label>
</ListView>