force-app/main/default/objects/Employee__c/listViews/Emro.listView-meta.xml
<ListView>
    <fullName>Emro</fullName>
    <columns>NAME</columns>
    <columns>EvCompNM__c</columns>
    <columns>EvGsber__c</columns>
    <columns>EvKostl__c</columns>
    <columns>EvSdeptNM__c</columns>
    <columns>EvMailAddr__c</columns>
    <columns>EvEmpNO__c</columns>
    <columns>EvUniqID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EvKostl__c</field>
        <operation>contains</operation>
        <value>T17</value>
    </filters>
    <label>Emro</label>
</ListView>